--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -40,14 +40,15 @@ img{
 
 p {
   position: absolute;
-  left: 85%;
+  left: 81%;
   bottom: 0%;
-  top: 5.8em;
+  top: 6.5em;
   width: 15%;
+  font-size: 0.9em;
 }
 
 
-@media all and (max-width: 1198px) and (min-width: 600px) {
+@media all and (max-width: 1198px) and (min-width: 900px) {
 
   
   .banner h1{
@@ -74,12 +75,12 @@ p {
 
   p {
     position: absolute;
-    left: 83%;
+    left: 81%;
     bottom: 0%;
-    top: 11.8em;
+    top: 9.8em;
     width: 15%;
-    font-size: 0.6em;
-    font-weight: 900;
+    font-size: 0.7em;
+    font-weight: 900
 }
 
 img {
@@ -91,3 +92,10 @@ img {
 }
 
 }
+
+@media all and (max-width: 772px) and (min-width: 500px) {
+  p {
+    display: hidden;
+  }
+
+ } 
